--- a/services/external-decorating.html
+++ b/services/external-decorating.html
@@ -1,234 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>External Decorating — Askern & Doncaster (DN6) | Home Maintenance Services</title>
-<meta name="description" content="External decorating & house painting in Askern and Doncaster (DN6). Masonry, render, timber, fascia, soffit and gutter painting. Free quotes, insured local decorator." />
-<link rel="canonical" href="https://steely1968.github.io/services/external-decorating" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gutter Quote Calculator | Home Maintenance Services Askern DN6</title>
+<meta name="description" content="Get an instant quote for gutter cleaning, repairs, and replacement. Enter your step count around your property and calculate your price at £5 per step.">
+<link rel="canonical" href="https://steely1968.github.io/our-services/gutter-quote-calculator/">
 
-<meta property="og:title" content="External Decorating — Askern & Doncaster (DN6) | Home Maintenance Services">
-<meta property="og:description" content="External decorating & house painting in Askern and Doncaster (DN6). Masonry, render, timber, fascia, soffit and gutter painting. Free quotes.">
-<meta property="og:url" content="https://steely1968.github.io/services/external-decorating">
-<meta property="og:image" content="https://steely1968.github.io/images/external-painting-hero-1200.jpg">
+<!-- Open Graph / Social -->
+<meta property="og:title" content="Gutter Quote Calculator | Home Maintenance Services Askern DN6">
+<meta property="og:description" content="Quick and easy online gutter quote calculator. Calculate your price instantly by entering your step count around your property.">
+<meta property="og:url" content="https://steely1968.github.io/our-services/gutter-quote-calculator/">
+<meta property="og:image" content="https://steely1968.github.io/logo.png">
 <meta name="twitter:card" content="summary_large_image">
 
 <style>
-:root{
---brand:#1a7f33;--muted:#f4f4f4;--txt:#111;--card:#fff;--maxw:1100px;--radius:10px;
-}
-*{box-sizing:border-box}
-body{
-margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-background:#fff;color:var(--txt);line-height:1.6;
-}
-header{display:flex;align-items:center;justify-content:space-between;padding:12px 16px;background:var(--muted);border-bottom:1px solid #e6e6e6}
-.branding{display:flex;align-items:center;gap:12px}
-.branding img{height:64px;display:block}
-.container{max-width:var(--maxw);margin:24px auto;padding:0 16px}
-.btn{padding:10px 14px;border-radius:8px;text-decoration:none;font-weight:600}
-.btn-primary{background:var(--brand);color:#fff}
-.btn-outline{border:2px solid #000}
-.hero{display:grid;gap:18px}
-.hero-inner{padding:18px;border-radius:var(--radius);background:#fff;box-shadow:0 6px 18px rgba(0,0,0,0.05)}
-h1{margin:0 0 8px;font-size:28px}
-.services-list{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;list-style:none;padding:0;margin:16px 0}
-.services-list li{background:#fff;border:1px solid #eaeaea;padding:10px;border-radius:8px;font-weight:600}
-.card{background:#fff;border:1px solid #eee;padding:16px;border-radius:10px}
-label{display:block;margin-top:8px;font-weight:600}
-input,textarea{
-width:100%;padding:10px;margin-top:6px;border:1px solid #ccc;border-radius:6px;font-size:15px;
-}
-footer{padding:20px;text-align:center;color:#666;border-top:1px solid #eee;margin-top:28px}
-@media(min-width:720px){.hero{grid-template-columns:1fr 360px}}
+body {margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
+header, footer {background:#f4f4f4;padding:15px 20px;text-align:center;}
+main {padding:20px;max-width:600px;margin:auto;}
+h1, h2 {margin-top:10px;}
+input[type="number"] {padding:10px;width:100%;max-width:200px;margin:10px 0;border-radius:5px;border:1px solid #ccc;}
+button {padding:10px 20px;background:#1a7f33;color:#fff;border:none;border-radius:5px;cursor:pointer;}
+button:hover {background:#166b2b;}
+.result {margin-top:20px;padding:15px;background:#f8f8f8;border-radius:8px;border:1px solid #ddd;font-weight:bold;}
 </style>
+
 </head>
 <body>
 
 <header>
-<div class="branding">
-<img src="/logo.png" alt="Home Maintenance Services logo" loading="lazy">
-<div>
-<strong>Home Maintenance Services</strong><br>
-<small>Askern & Doncaster — DN6</small>
-</div>
-</div>
-<div style="display:flex;gap:10px">
-<a class="btn btn-outline" href="/">Home</a>
-<a href="/contact">Contact</a>
-<a class="btn btn-primary" href="tel:07735873694">Call 07735 873694</a>
-</div>
+<h1>Home Maintenance Services – Gutter Quote Calculator</h1>
+<p>Askern & Doncaster DN6</p>
 </header>
 
-<main class="container">
+<main>
+<h2>Calculate Your Gutter Service Quote</h2>
+<p>Walk around the outside of your property and count your steps. Enter the total number of steps below to get an instant quote.</p>
 
-<div class="hero">
-<div class="hero-inner">
-<h1>External Decorating — Askern & Doncaster (DN6)</h1>
-<p>Professional exterior decorating and property painting across Askern, Doncaster and DN6. Masonry & render, timber & metalwork painting, fascia & soffit work and preparatory repairs. Free quotes and friendly service.</p>
+<label for="steps">Number of steps around your property:</label>
+<input type="number" id="steps" min="0" placeholder="Enter step count">
 
-<div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:8px">
-<a class="btn btn-primary" href="#contact">Request a Free Quote</a>
-<a class="btn btn-outline" href="#process">How We Work</a>
-<a class="btn" href="#faqs">FAQs</a>
-</div>
+<button onclick="calculateQuote()">Get Quote</button>
 
-<section class="card" style="margin-top:16px">
-<h2>Why choose our external decorating?</h2>
-<ul>
-<li>Local tradesman based in Askern</li>
-<li>Professional preparation & repair</li>
-<li>Weatherproof coatings</li>
-<li>Fascia, soffit, render & timber specialist</li>
-<li>Fully insured & reliable</li>
-</ul>
-</section>
-</div>
+<div class="result" id="quoteResult" aria-live="polite" style="display:none;"></div>
 
-<aside class="card">
-<h2>Quick facts</h2>
-<dl>
-<dt>Area covered</dt><dd>Askern & Doncaster DN6</dd>
-<dt>Typical job time</dt><dd>1–3 days</dd>
-<dt>Call-out fee</dt><dd>None</dd>
-</dl>
+<script>
+function calculateQuote() {
+const stepCount = parseInt(document.getElementById("steps").value);
+if (isNaN(stepCount) || stepCount < 0) {
+alert("Please enter a valid number of steps.");
+return;
+}
+const pricePerStep = 5; // £5 per step
+const totalPrice = stepCount * pricePerStep;
+const resultDiv = document.getElementById("quoteResult");
+resultDiv.style.display = "block";
+resultDiv.textContent = `Estimated Quote: £${totalPrice.toLocaleString()}`;
+}
+</script>
 
-<img src="/images/external-painting-hero-800.jpg" alt="Exterior decorating work in Askern" loading="lazy" width="360" height="240" style="border-radius:8px;margin-top:12px">
-<p style="font-size:14px;color:#555">Free on-site colour samples available.</p>
-</aside>
-</div>
-
-<div style="display:grid;gap:22px;margin-top:22px">
-
-<article class="card">
-<h2>What we do</h2>
-<p>Durable exterior finishes that protect and enhance properties in Askern, Doncaster and DN6.</p>
-
-<ul class="services-list">
-<li>Masonry & render painting</li>
-<li>Crack repair & breathable coatings</li>
-<li>Fascia, soffit & gutter painting</li>
-<li>Timber doors, frames & cladding</li>
-<li>Metal gates, railings & posts</li>
-<li>Fence & shed staining</li>
-<li>Pressure washing & preparation</li>
-</ul>
-
-<h3>Materials</h3>
-<p>We use high-performance paints and primers for long-lasting results.</p>
-
-<h3>Safety</h3>
-<p>Secure ladder work and short-term scaffold used when required.</p>
-</article>
-
-<section class="card" id="process">
-<h2>Our Process</h2>
-<ol>
-<li><strong>Survey & quote:</strong> Thorough assessment with a written quote.</li>
-<li><strong>Preparation:</strong> Cleaning, repairs, scraping and priming.</li>
-<li><strong>Painting:</strong> Primer + two coats of exterior paint.</li>
-<li><strong>Finish:</strong> Client walk-through and full tidy-up.</li>
-</ol>
-</section>
-
-<!-- REMOVED GALLERY SECTION -->
-
-<aside class="card" id="contact">
-<h2>Request a free quote</h2>
-<p>Call <strong>07735 873694</strong> or complete the form below.</p>
-
-<form action="https://formsubmit.co/martinsteel940@gmail.com" method="POST" class="contact-form">
-<input type="hidden" name="_captcha" value="false">
-<input type="hidden" name="_template" value="table">
-<input type="hidden" name="_next" value="https://steely1968.github.io/thank-you.html">
-<input type="text" name="_honey" style="display:none">
-
-<label for="name">Your name</label>
-<input id="name" name="name" type="text" required>
-
-<label for="phone">Phone number</label>
-<input id="phone" name="phone" type="tel" required placeholder="07700 900123">
-
-<label for="address">Address / street</label>
-<input id="address" name="address" type="text" required>
-
-<label for="message">Tell us about the job</label>
-<textarea id="message" name="message" rows="5" required></textarea>
-
-<button type="submit" style="background:#1a7f33;color:#fff;padding:12px;border:0;border-radius:8px;font-weight:700;cursor:pointer">Send Request</button>
-</form>
-
-<p style="margin-top:10px;font-size:13px;color:#666">Your details are private & never shared.</p>
-</aside>
-
-<section class="card">
-<h2>Testimonials</h2>
-<blockquote style="margin:0;padding-left:12px;border-left:4px solid #ddd">
-"Excellent finish and very professional throughout." — <strong>Askern customer</strong>
-</blockquote>
-</section>
-
-<section class="card" id="faqs">
-<h2>FAQs</h2>
-<dl>
-<dt>Do you give written quotes?</dt>
-<dd>Yes — every quote is written and detailed.</dd>
-
-<dt>What about bad weather?</dt>
-<dd>We only paint in suitable conditions and reschedule if needed.</dd>
-
-<dt>Do you use scaffold?</dt>
-<dd>Ladders for small jobs, scaffold for higher access when required.</dd>
-</dl>
-</section>
-
-</div>
 </main>
 
 <footer>
-© <span id="year"></span> Home Maintenance Services — Askern, Doncaster DN6
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
+<script>document.getElementById("currentYear").textContent = new Date().getFullYear();</script>
 </footer>
-
-<script>document.getElementById('year').textContent=new Date().getFullYear();</script>
-
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@graph":[
-{
-"@type":"LocalBusiness",
-"@id":"https://steely1968.github.io/#localbusiness",
-"name":"Home Maintenance Services",
-"image":"https://steely1968.github.io/logo.png",
-"url":"https://steely1968.github.io/",
-"telephone":"+447735873694",
-"priceRange":"£",
-"address":{
-"@type":"PostalAddress",
-"streetAddress":"35 Airstone Road",
-"addressLocality":"Askern",
-"addressRegion":"Doncaster",
-"postalCode":"DN6 0QA",
-"addressCountry":"UK"
-}
-},
-{
-"@type":"Service",
-"name":"External Decorating & External House Painting",
-"serviceType":"External Decorating",
-"areaServed":{"@type":"Place","address":{"@type":"PostalAddress","addressLocality":"Askern","addressRegion":"Doncaster","postalCode":"DN6"}}
-},
-{
-"@type":"FAQPage",
-"mainEntity":[
-{"@type":"Question","name":"Do you provide a written quote?","acceptedAnswer":{"@type":"Answer","text":"Yes — every quote is written and includes all materials and labour."}},
-{"@type":"Question","name":"What if the weather is poor?","acceptedAnswer":{"@type":"Answer","text":"We only paint in safe, dry conditions and reschedule where needed."}},
-{"@type":"Question","name":"Do you use scaffolding?","acceptedAnswer":{"@type":"Answer","text":"We use ladders for most work and scaffold for high-access areas."}}
-]
-}
-]
-}
-</script>
 
 </body>
 </html>
