--- a/services/quote-gutters.html
+++ b/services/quote-gutters.html
@@ -160,13 +160,14 @@ footer a:hover{text-decoration:underline;}
 <li>Repairing leaks and damage to ensure proper water flow</li>
 <li>Full replacement of worn or broken gutters</li>
 <li>Inspection and maintenance advice for long-lasting performance</li>
+<li>Fascia and gutter washing for appearance</li>
 </ul>
 
 <h2>Get an Instant Gutter Quote</h2>
-<p>Walk around your property and count your steps. Select the service type and enter the number of steps to get your price.</p>
+<p>Walk normally around your property close to the wall and count your steps. Select the service type and enter the number of steps to get your price.</p>
 
 <div class="calculator">
-<label for="serviceType">Service Type:</label>
+<label for="serviceType">Choose Service Type:</label>
 <select id="serviceType">
 <option value="cleaning" data-price="2.5">Clean Gutters</option>
 <option value="replacement" data-price="14">Replace Gutters</option>
