--- a/our-services/gutter-replacement-repairs-clearing.html
+++ b/our-services/gutter-replacement-repairs-clearing.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gutter Replacement, Repairs & Cleaning | Home Maintenance Services Askern DN6</title>
-<meta name="description" content="Professional gutter replacement, repair, and cleaning services in Askern & Doncaster DN6. Keep your gutters clear, functional, and protect your home from water damage.">
+<meta name="description" content="Professional gutter replacement, repair, cleaning, and instant quote calculator in Askern & Doncaster DN6. Enter your step count and select a service to get your price.">
 <link rel="canonical" href="https://steely1968.github.io/our-services/gutter-replacement-repairs-clearing/">
 
 <!-- Open Graph / Social -->
 <meta property="og:title" content="Gutter Replacement, Repairs & Cleaning | Home Maintenance Services Askern DN6">
-<meta property="og:description" content="Professional gutter replacement, repair, and cleaning services in Askern & Doncaster DN6. Affordable, local, and reliable handyman services.">
+<meta property="og:description" content="Professional gutter replacement, repair, cleaning, and instant quote calculator in Askern & Doncaster DN6. Affordable, local, and reliable handyman services.">
 <meta property="og:url" content="https://steely1968.github.io/our-services/gutter-replacement-repairs-clearing/">
-<meta property="og:image" content="/logo.png">
+<meta property="og:image" content="https://steely1968.github.io/logo.png">
 <meta name="twitter:card" content="summary_large_image">
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
-header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
+body {margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
+header{display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
 header img{height:90px;}
-nav{display:flex;align-items:center;gap:15px;}
+nav{display:flex;flex-wrap:wrap;align-items:center;gap:15px;}
 nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;}
 nav a:hover{background:#e2e2e2;}
 .call-button{background-color:#1a7f33;color:#fff;}
@@ -32,6 +31,12 @@ ul{padding-left:20px;}
 footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
 footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
 footer a:hover{text-decoration:underline;}
+/* Quote Calculator Styles */
+.calculator {background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
+.calculator input[type="number"], .calculator select {padding:10px;width:100%;max-width:250px;margin:10px 0;border-radius:5px;border:1px solid #ccc;}
+.calculator button {padding:10px 20px;background:#1a7f33;color:#fff;border:none;border-radius:5px;cursor:pointer;}
+.calculator button:hover {background:#166b2b;}
+.calculator .result {margin-top:20px;padding:15px;background:#e2ffe8;border-radius:8px;border:1px solid #c6f0c8;font-weight:bold;}
 </style>
 
 <!-- LocalBusiness Schema -->
@@ -62,7 +67,10 @@ footer a:hover{text-decoration:underline;}
 "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
 "opens": "08:00",
 "closes": "18:00"
-}]
+}],
+"sameAs": [
+"https://facebook.com"
+]
 }
 </script>
 
@@ -132,15 +140,16 @@ footer a:hover{text-decoration:underline;}
 <body>
 
 <header>
-<img src="/logo.png" alt="Home Maintenance Services Logo">
-<nav>
+<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Logo">
+<nav role="navigation" aria-label="Main Navigation">
 <a href="/">Home</a>
+<a href="/our-services/">Our Services</a>
 <a href="/contact">Contact</a>
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </nav>
 </header>
 
-<main>
+<main role="main">
 <h1>Gutter Replacement, Repairs & Cleaning in Askern & Doncaster (DN6)</h1>
 
 <p>Ensure your home is protected from water damage with our professional gutter services. From cleaning blocked gutters to repairing or replacing damaged sections, we offer reliable solutions for all properties.</p>
@@ -151,7 +160,71 @@ footer a:hover{text-decoration:underline;}
 <li>Repairing leaks and damage to ensure proper water flow</li>
 <li>Full replacement of worn or broken gutters</li>
 <li>Inspection and maintenance advice for long-lasting performance</li>
+<li>Fascia and gutter washing for appearance</li>
 </ul>
+
+<h2>Get an Instant Gutter Quote</h2>
+<p>Walk normally around your property close to the wall and count your steps. Select the service type and enter the number of steps to get your price.</p>
+
+<div class="calculator">
+<label for="serviceType">Choose Service Type:</label>
+<select id="serviceType">
+<option value="cleaning" data-price="2.5">Clean Gutters</option>
+<option value="replacement" data-price="14">Replace Gutters</option>
+</select>
+
+<label for="steps">Number of steps around your property:</label>
+<input type="number" id="steps" min="1" placeholder="Enter step count">
+
+<button id="calculateBtn">Get Quote</button>
+
+<div class="result" id="quoteResult" aria-live="polite" style="display:none;"></div>
+</div>
+
+<script>
+document.getElementById("calculateBtn").addEventListener("click", function() {
+const stepInput = document.getElementById("steps");
+let steps = parseInt(stepInput.value);
+
+if (isNaN(steps) || steps < 1) {
+alert("Please enter a valid number of steps (1 or more).");
+return;
+}
+
+const serviceSelect = document.getElementById("serviceType");
+const selectedOption = serviceSelect.options[serviceSelect.selectedIndex];
+const pricePerStep = parseFloat(selectedOption.dataset.price);
+
+const totalPrice = steps * pricePerStep;
+const formattedPrice = totalPrice.toFixed(2);
+
+const resultDiv = document.getElementById("quoteResult");
+resultDiv.style.display = "block";
+resultDiv.textContent = `Estimated Quote for ${selectedOption.text}: £${formattedPrice}`;
+
+// Remove old schema if exists
+const oldScript = document.getElementById("dynamicOfferSchema");
+if (oldScript) oldScript.remove();
+
+// Add dynamic Offer schema
+const offerSchema = {
+"@context": "https://schema.org",
+"@type": "Offer",
+"name": `${selectedOption.text} - Gutter Service`,
+"priceCurrency": "GBP",
+"price": formattedPrice,
+"url": window.location.href,
+"availability": "https://schema.org/InStock",
+"validFrom": new Date().toISOString()
+};
+
+const script = document.createElement("script");
+script.type = "application/ld+json";
+script.id = "dynamicOfferSchema";
+script.textContent = JSON.stringify(offerSchema);
+document.head.appendChild(script);
+});
+</script>
 
 <h2>Other Services You May Be Interested In</h2>
 <ul>
@@ -182,12 +255,8 @@ footer a:hover{text-decoration:underline;}
 </main>
 
 <footer>
-<p>
-&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
-</p>
-<p>
-<a href="https://facebook.com" target="_blank" rel="noopener">Find us on Facebook</a>
-</p>
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
+<p><a href="https://facebook.com" target="_blank" rel="noopener noreferrer">Find us on Facebook</a></p>
 </footer>
 
 <script>
