--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ footer a:hover{text-decoration:underline;}
 &copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
 </p>
 <p>
-<a href="https://facebook.com" target="_blank" rel="noopener">Find us on Facebook</a>
+<a href="https://www.facebook.com/profile.php?id=61584395621256">Find us on Facebook</a>
 </p>
 </footer>
 
