--- a/our-services/gutter-replacement-repairs-clearing.html
+++ b/our-services/gutter-replacement-repairs-clearing.html
@@ -255,7 +255,7 @@ document.head.appendChild(script);
 
 <footer>
 <p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
-<p><a href="https://facebook.com" target="_blank" rel="noopener noreferrer">Find us on Facebook</a></p>
+<p><a href="https://www.facebook.com/profile.php?id=61584395621256">Find us on Facebook</a></p>
 </footer>
 
 <script>
