--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,17 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home Maintenance & Handyman Services | Askern & Doncaster DN6</title>
-<meta name="description" content="Reliable property maintenance and handyman services in Askern & Doncaster DN6. Gutter repairs, UPVC restoration, gardening, fencing, pressure washing, exterior carpentry, and decorating. Affordable, local, and professional.">
+<title>Contact Us | Home Maintenance & Handyman Services in Askern & Doncaster DN6</title>
+<meta name="description" content="Get in touch with your local handyman in Askern & Doncaster DN6. Contact us for quotes, bookings, or questions about guttering, fencing, pressure washing, gardening and all home maintenance services.">
 
-<link rel="canonical" href="https://steely1968.github.io/">
+<link rel="canonical" href="https://steely1968.github.io/contact/">
 
 <!-- Open Graph -->
-<meta property="og:title" content="Home Maintenance & Handyman Services | Askern & Doncaster DN6">
-<meta property="og:description" content="Professional property maintenance and handyman services in Askern & Doncaster DN6. Gutter repairs, fencing, gardening, pressure washing and more.">
-<meta property="og:url" content="https://steely1968.github.io/">
+<meta property="og:title" content="Contact Us | Home Maintenance & Handyman Services">
+<meta property="og:description" content="Contact your reliable handyman service in Askern & Doncaster DN6 for quotes and bookings.">
+<meta property="og:url" content="https://steely1968.github.io/contact/">
 <meta property="og:image" content="/logo.png">
+
 <meta name="twitter:card" content="summary_large_image">
 
 <style>
@@ -21,15 +22,17 @@ body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background
 header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
 header img{height:90px;}
 nav{display:flex;align-items:center;gap:15px;}
-nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;}
+nav a{text-decoration:none;color:#000;font-weight:bold;padding:10px 16px;border-radius:6px;}
 nav a:hover{background:#e2e2e2;}
 .call-button{background-color:#1a7f33;color:#fff;}
 .call-button:hover{background-color:#166b2b;}
-main{padding:20px;max-width:1000px;margin:auto;}
+main{padding:20px;max-width:900px;margin:auto;}
 h1,h2{margin-top:10px;}
-ul{padding-left:20px;}
-.service-list a{display:block;background:#f8f8f8;padding:14px 18px;margin:12px 0;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-size:17px;font-weight:bold;transition:0.25s;}
-.service-list a:hover{background:#e8ffe8;border-color:#28a745;transform:translateX(4px);}
+form{background:#f8f8f8;padding:20px;border:1px solid #ddd;border-radius:10px;margin-top:20px;}
+form label{display:block;margin-top:12px;font-weight:bold;}
+form input,form textarea{width:100%;padding:12px;margin-top:6px;border:1px solid #ccc;border-radius:6px;font-size:16px;}
+form button{margin-top:20px;padding:14px 22px;font-size:17px;font-weight:bold;border:none;border-radius:6px;background-color:#1a7f33;color:#fff;cursor:pointer;}
+form button:hover{background-color:#166b2b;}
 .quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
 .quick-facts ul{padding-left:20px;}
 footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;background:#f4f4f4;}
@@ -42,7 +45,6 @@ footer a:hover{text-decoration:underline;}
 {
 "@context": "https://schema.org",
 "@type": "LocalBusiness",
-"@id": "https://steely1968.github.io/#localbusiness",
 "name": "Home Maintenance Services",
 "image": "https://steely1968.github.io/logo.png",
 "url": "https://steely1968.github.io/",
@@ -61,13 +63,6 @@ footer a:hover{text-decoration:underline;}
 "latitude": 53.616,
 "longitude": -1.153
 },
-"areaServed": [{
-"@type": "Place",
-"name": "Askern"
-},{
-"@type": "Place",
-"name": "Doncaster DN6"
-}],
 "openingHoursSpecification": [{
 "@type": "OpeningHoursSpecification",
 "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
@@ -77,7 +72,7 @@ footer a:hover{text-decoration:underline;}
 }
 </script>
 
-<!-- Homepage FAQ Schema -->
+<!-- FAQ Schema -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -85,23 +80,18 @@ footer a:hover{text-decoration:underline;}
 "mainEntity": [
 {
 "@type": "Question",
-"name": "Which services do you offer?",
-"acceptedAnswer": { "@type": "Answer", "text": "We provide gutter cleaning, gutter repairs and replacements, UPVC restoration, gardening services, exterior carpentry, fence construction and repairs, pressure washing, and exterior decorating." }
+"name": "How can I book a handyman?",
+"acceptedAnswer": { "@type": "Answer", "text": "You can book by phone, email, or by filling in our contact form on this page." }
 },
 {
 "@type": "Question",
-"name": "Do you serve Askern and Doncaster DN6?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we are a local handyman service covering Askern, Doncaster DN6, and surrounding areas." }
+"name": "Do you provide free quotes?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, all quotes are free and we never charge a call-out fee." }
 },
 {
 "@type": "Question",
-"name": "Do you charge call-out fees?",
-"acceptedAnswer": { "@type": "Answer", "text": "No, we never charge a call-out fee." }
-},
-{
-"@type": "Question",
-"name": "Can you handle small jobs as well as larger projects?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we handle jobs of all sizes, from small repairs to full property maintenance projects." }
+"name": "Which areas do you cover?",
+"acceptedAnswer": { "@type": "Answer", "text": "We cover Askern, Doncaster DN6, and surrounding areas." }
 }
 ]
 }
@@ -112,65 +102,68 @@ footer a:hover{text-decoration:underline;}
 
 <header role="banner">
 <a href="/" aria-label="Home Maintenance Services Homepage">
-<img src="/logo.png" alt="Home Maintenance Services Logo" height="90">
+<img src="/logo.png" alt="Home Maintenance Services Logo">
 </a>
 
-<nav role="navigation" aria-label="Main navigation">
+<nav role="navigation" aria-label="Main menu">
 <a href="/">Home</a>
 <a href="/contact">Contact</a>
-<a href="tel:07735873694" class="call-button" aria-label="Call 07735 873694">Call 07735 873694</a>
+<a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </nav>
 </header>
 
-<main>
+<main role="main">
 
-<h1>Professional Handyman & Property Maintenance Services in Askern & Doncaster (DN6)</h1>
+<h1>Contact Us</h1>
+<p>If you’d like a quote, have a question, or want to book any of our handyman services, you can call, email, or use the contact form below. No call-out fees, fast and friendly local service.</p>
 
-<p>We provide reliable, local, and affordable property maintenance solutions that keep your home or business safe, functional, and looking great. With no call-out fees and a fast, friendly approach, we handle everything from small repairs to full maintenance projects.</p>
+<h2>Send Us a Message</h2>
 
-<h2>Our Services</h2>
+<form action="https://formsubmit.co/YOUR-PRIVATE-ENDPOINT" method="POST" aria-label="Contact form">
 
-<div class="service-list" role="navigation" aria-label="Services list">
-<a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a>
-<a href="/our-services/upvc-restoration">UPVC Restoration</a>
-<a href="/our-services/gardening-services">Gardening Services</a>
-<a href="/our-services/exterior-carpentry">Exterior Carpentry</a>
-<a href="/our-services/fence-construction-repairs">Fence Construction & Repairs</a>
-<a href="/our-services/pressure-washing">Pressure Washing</a>
-<a href="/our-services/exterior-decorating">Exterior Decorating</a>
-</div>
+<!-- Redirect to thank-you page after submission -->
+<input name="_redirect" type="hidden" value="https://steely1968.github.io/thank-you">
 
-<h2>Why Choose Home Maintenance Services?</h2>
-<div class="quick-facts" role="region" aria-label="Why choose us?">
+<label for="name">Your Name</label>
+<input id="name" name="name" type="text" required aria-required="true">
+
+<label for="email">Email Address</label>
+<input id="email" name="email" type="email" required aria-required="true">
+
+<label for="phone">Phone Number</label>
+<input id="phone" name="phone" type="tel">
+
+<label for="message">Your Message</label>
+<textarea id="message" name="message" rows="6" required aria-required="true"></textarea>
+
+<button type="submit">Send Message</button>
+
+</form>
+
+<h2>Quick Facts</h2>
+<div class="quick-facts" role="region" aria-label="Quick contact facts">
 <ul>
 <li>Local handyman service in Askern & Doncaster DN6</li>
-<li>No call-out fees — ever</li>
-<li>Transparent pricing and free quotes</li>
-<li>Experienced in small repairs and large maintenance projects</li>
-<li>Fully insured, professional, and reliable</li>
-<li>Friendly service with attention to detail</li>
-<li>Quick response and same-day service for many small jobs</li>
+<li>Same-day availability for many small jobs</li>
+<li>No call-out fees</li>
+<li>Free quotes and friendly service</li>
+<li>Fully insured and reliable</li>
 </ul>
 </div>
 
-<h2>Contact Us Today</h2>
-<p>For advice, a free quote, or to book any of our services, get in touch now.</p>
-<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
+<h2>Prefer to Call?</h2>
+<p><strong>Phone:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
 
 <footer role="contentinfo">
-<p>
-&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
-</p>
-<p>
-<a href="https://facebook.com" target="_blank" rel="noopener nofollow">Find us on Facebook</a>
-</p>
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
+<p><a href="https://facebook.com" target="_blank" rel="noopener nofollow">Find us on Facebook</a></p>
+</footer>
 
 <script>
 document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
-</footer>
 
 </body>
 </html>
